adding video poster images url to yml files

--- a/src/_data/contact.yml
+++ b/src/_data/contact.yml
@@ -4,7 +4,7 @@ en:
     title: "CONTACT"
     subtitle: "As one of the most advanced production sites in the global metal packaging sector, Astir’s central manufacturing plant is devoted to the efficient production of high quality bottle caps with the lowest environmental impact."
     videomp4: "/assets/video/contact/contact.mp4"
-    videoPoster: "/assets/video/home/home.jpg"
+    videoPoster: "/assets/video/contact/contact.jpg"
     videoMobilePoster: "/images/cover-images/contact.jpg"
     WatchFullVideo: false
   contact:
