--- a/src/_data/crown.yml
+++ b/src/_data/crown.yml
@@ -4,7 +4,7 @@ en:
     title: "CROWN CORKS"
     subtitle: "Safe, efficient and established. Astir crown corks stand out for their excellent quality and zero fault tolerance. We use high-standard raw materials and advanced technologies to create brand-building metal packaging solutions with the lowest ecological foot print."
     videomp4: "/assets/video/corks/corks.mp4"
-    videoPoster: "/assets/video/home/home.jpg"
+    videoPoster: "/assets/video/corks/corks.jpg"
     videoMobilePoster: "/images/cover-images/Crown_Corks.jpg"
     WatchFullVideo: false
   crown-corks:
