--- a/src/_data/why-crown-corks.yml
+++ b/src/_data/why-crown-corks.yml
@@ -4,7 +4,7 @@ en:
     title: "WHY CROWN CORKS"
     subtitle: "For more than 100 years, the crown cork safely seals and preserves the freshness of beers and beverages as no other alternative."
     videomp4: "/assets/video/why-crown-corks/why-crown-corks.mp4"
-    videoPoster: "/assets/video/home/home.jpg"
+    videoPoster: "/assets/video/why-crown-corks/why-crown-corks.jpg"
     videoMobilePoster: "/images/cover-images/Why.jpg"
     WatchFullVideo: false
   why:
