--- a/src/_data/logistics.yml
+++ b/src/_data/logistics.yml
@@ -4,7 +4,7 @@ en:
     title: "LOGISTICS"
     subtitle: "Astir strives in removing uncertainties from any client’s supply chain. From order to delivery we exceed our clients expectations and provide a fully flexible unparalleled offering."
     videomp4: "/assets/video/logistics/specifications.mp4"
-    videoPoster: "/assets/video/home/home.jpg"
+    videoPoster: "/assets/video/logistics/logistics.jpg"
     videoMobilePoster: "/images/cover-images/Logistics.jpg"
     WatchFullVideo: false
   supply-chain:
