--- a/_config.build.yml
+++ b/_config.build.yml
@@ -2,7 +2,7 @@
 # Overrides these options in _config.yml
 
 # Write your domain.
-url: https://astir.devel.pointblank.gr
+url: https://www.astircrowns.com
 
 # Hides your drafts and future posts
 future: false
