--- a/src/_data/contact.yml
+++ b/src/_data/contact.yml
@@ -14,7 +14,7 @@ en:
     skypeLabel: "SKYPE"
     skypetext: "Call us on Skype"
     skypeUsername: "echo123"
-    enquiries: "GENREAL ENQUIRIES"
+    enquiries: "GENERAL ENQUIRIES"
     email: "&#097;&#115;&#116;&#105;&#114;&#064;&#118;&#105;&#116;&#111;&#103;&#105;&#097;&#110;&#110;&#105;&#115;&#046;&#103;&#114;"
     headquartersLabel: "ATHENS HEADQUARTERS"
     headquartersAddress: "Position Draseza, Ind. Park of Avlona,<br/>P.C. 19011, P.O. Box 16<br/>Attiki, Greece"
