Fixing typo in main menu

--- a/src/_data/menu.yml
+++ b/src/_data/menu.yml
@@ -7,7 +7,7 @@ en:
     footerTitle: "Company"
     url: "/company/"
   facilities:
-    menuTitle: "FACILITES"
+    menuTitle: "FACILITIES"
     footerTitle: "Facilities"
     url: "/facilities/"
   crown-corks:
